--- a/index.html
+++ b/index.html
@@ -99,16 +99,31 @@
     <!-- 1 services -->
 
     
-    <div class="container col-xxl-8 px-4 py-5" id="home">
-        <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+    <div class="container col-xxl-8 px-4 py-5 pb-0" id="home">
+        <div class="row flex-lg-row-reverse align-items-center g-5 py-5 pb-0">
           <div class="col-10 col-sm-8 col-lg-6">
             <img src="images/bootstrap-themes.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="" height="" loading="lazy">
           </div>
           <div class="col-lg-6">
-            <h2 class="display-5 lh-1 mb-3">Your One-Stop Solution for Memorable Events, Global Imports, and Unique Anime Merchandise!
+            <h2 class="display-5 lh-1 mb-3">Comprehensive Services for Events, Imports, and Exclusive Collectibles
             </h2>
-            <p class="lead text-black">"From photo booth rentals to sourcing global products and exclusive anime collectibles, we’ve got you covered."</p>
+            <!-- <p class="lead text-black">lorem ipsumjjjjjjjjjjjjjjjjjjj dhfdkhfsldf hdfldkf jhdfjlkdj h klh lj hlj  lkdjfd h kj lkj lksdf  kljkld   hoa fd  hdfkfkdshf  "</p>
+             -->
+          </div>
+        </div>
+      </div>
+
+
+    <div class="container col-xxl-8 px-4 py-5" id="home">
+        <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+          <div class="col-lg-6">
+            <h2 class="display-5 lh-1 mb-3">As we grow, we're committed to expanding our service offerings and continuously improving customer experiences.
+            </h2>
+            <!-- <p class="lead text-black"></p> -->
             
+          </div>
+          <div class="col-10 col-sm-8 col-lg-6">
+            <img src="images/bootstrap-themes.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="" height="" loading="lazy">
           </div>
         </div>
       </div>
@@ -284,7 +299,7 @@
     <!-- 3 contact -->
     <div>
 
-      <div class="py-5 container">
+      <div class="py-5 px-4 container">
         <h2 class="border-bottom pb-1" id="contact">Contact</h2>
         <p class="lead text-black">Got questions or need assistance? We’re here to help! Whether you’re interested in our services, have a collaboration idea, or just want to connect, feel free to reach out.
 
@@ -364,13 +379,11 @@
             <h5 class="text-uppercase mb-4">About company</h5>
   
             <p>
-              At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
-              voluptatum deleniti atque corrupti.
+              We are a multi-service company focused on providing top-tier global imports, memorable event experiences, and exclusive collectibles. 
             </p>
   
             <p>
-              Blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas
-              molestias.
+              We aim to expand our offerings and connect with customers worldwide.
             </p>
   
             <div class="mt-4">
@@ -384,7 +397,7 @@
   
           <!--Grid column-->
           <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
-            <ul class="fa-ul" style="margin-left: 1.65em;" >
+            <ul class="fa-ul " style="margin-left: 1.65em;" >
               <li class="mb-3">
                 <span class="fa-li"><i class="fas fa-home"></i></span><span class="ms-2">New Delhi</span>
               </li>
@@ -405,12 +418,12 @@
             <table class="table" >
               <tbody class="fw-normal">
                 <tr class="bg-black">
-                  <td class="bg-black text-white">Mon - Thu:</td>
-                  <td class="bg-black text-white">8am - 9pm</td>
+                  <td class="bg-black text-white">Mon - Fri:</td>
+                  <td class="bg-black text-white">9am - 8pm</td>
                 </tr>
                 <tr>
-                  <td class="bg-black text-white">Fri - Sat:</td>
-                  <td class="bg-black text-white">8am - 1am</td>
+                  <td class="bg-black text-white">Saturday:</td>
+                  <td class="bg-black text-white">10am - 8pm</td>
                 </tr>
                 <tr>
                   <td class="bg-black text-white">Sunday:</td>
