--- a/index.html
+++ b/index.html
@@ -226,11 +226,11 @@
           <div class="col-md-6">
             <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
               <div class="col p-4 d-flex flex-column position-static">
-                <strong class="d-inline-block mb-2 text-primary-emphasis">World</strong>
-                <h3 class="mb-0">Featured post</h3>
+                <strong class="d-inline-block mb-2 text-primary-emphasis">Info</strong>
+                <h3 class="mb-0">Photobooth which makes memories</h3>
                 <div class="mb-1 text-body-secondary">Nov 12</div>
-                <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
+                <p class="card-text mb-auto text-black">Picture this: Your event is in full swing, laughter fills the air, and memori...</p>
+                <a href="photBlog.html" class="icon-link gap-1 icon-link-hover stretched-link">
                   Continue reading
                   <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
                 </a>
@@ -243,11 +243,11 @@
           <div class="col-md-6">
             <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
               <div class="col p-4 d-flex flex-column position-static">
-                <strong class="d-inline-block mb-2 text-success-emphasis">Design</strong>
-                <h3 class="mb-0">Post title</h3>
+                <strong class="d-inline-block mb-2 text-success-emphasis">Info</strong>
+                <h3 class="mb-0">Our Store</h3>
                 <div class="mb-1 text-body-secondary">Nov 11</div>
-                <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
+                <p class="mb-auto">Welcome to our online eCommerce store, your one-stop destination for high-quality products that bring convenience, style, and ...</p>
+                <a href="eComBlog.html" class="icon-link gap-1 icon-link-hover stretched-link">
                   Continue reading
                   <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
                 </a>
@@ -261,28 +261,11 @@
           <div class="col-md-6">
             <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
               <div class="col p-4 d-flex flex-column position-static">
-                <strong class="d-inline-block mb-2 text-primary-emphasis">World</strong>
-                <h3 class="mb-0">Featured post</h3>
+                <strong class="d-inline-block mb-2 text-primary-emphasis">Info</strong>
+                <h3 class="mb-0">Read about our Import/Export </h3>
                 <div class="mb-1 text-body-secondary">Nov 12</div>
-                <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
-                  Continue reading
-                  <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
-                </a>
-              </div>
-              <div class="col-auto d-none d-lg-block">
-                <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-              <div class="col p-4 d-flex flex-column position-static">
-                <strong class="d-inline-block mb-2 text-success-emphasis">Design</strong>
-                <h3 class="mb-0">Post title</h3>
-                <div class="mb-1 text-body-secondary">Nov 11</div>
-                <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
+                <p class="card-text mb-auto">The world of international trade is full of opportunities, but navigating the complexities of import and export can be chall...</p>
+                <a href="importBlog.html" class="icon-link gap-1 icon-link-hover stretched-link">
                   Continue reading
                   <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
                 </a>
