--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             
           </div>
           <div class="col-10 col-sm-8 col-lg-6">
-            <img src="images/bootstrap-themes.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="" height="" loading="lazy">
+            <img src="images/li" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="" height="" loading="lazy">
           </div>
         </div>
       </div>
@@ -246,7 +246,7 @@
                 <strong class="d-inline-block mb-2 text-success-emphasis">Info</strong>
                 <h3 class="mb-0">Our Store</h3>
                 <div class="mb-1 text-body-secondary">Nov 11</div>
-                <p class="mb-auto">Welcome to our online eCommerce store, your one-stop destination for high-quality products that bring convenience, style, and ...</p>
+                <p class="mb-auto text-black">Welcome to our online eCommerce store, your one-stop destination for high-quality products that bring convenience, style, and ...</p>
                 <a href="eComBlog.html" class="icon-link gap-1 icon-link-hover stretched-link">
                   Continue reading
                   <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
@@ -264,7 +264,7 @@
                 <strong class="d-inline-block mb-2 text-primary-emphasis">Info</strong>
                 <h3 class="mb-0">Read about our Import/Export </h3>
                 <div class="mb-1 text-body-secondary">Nov 12</div>
-                <p class="card-text mb-auto">The world of international trade is full of opportunities, but navigating the complexities of import and export can be chall...</p>
+                <p class="card-text mb-auto text-black">The world of international trade is full of opportunities, but navigating the complexities of import and export can be chall...</p>
                 <a href="importBlog.html" class="icon-link gap-1 icon-link-hover stretched-link">
                   Continue reading
                   <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
