--- a/autobooth.html
+++ b/autobooth.html
@@ -114,7 +114,7 @@
   <div class="row justify-content-center">
 
 <!-- photo hero  -->
-      <div class="p-5 text-center bg-image rounded-3" style="background-image: url('images/elenemts.png');
+      <div class="p-5 text-center bg-image rounded-3" style="background-image: url('images/cff57e2b-5736-46eb-a1eb-e28bc0ad15d5.jpeg');
       height: 700px;">
         <div class="d-flex justify-content-center align-items-center h-100">
           <div class="text-white">
