--- a/autobooth.html
+++ b/autobooth.html
@@ -41,7 +41,7 @@
 
     <title>Photobooth For Rent</title>
   </head>
-  <body class="text-black bg-white h1-light">
+  <body class="text-black bg-light h1-light">
 
 
     <div class="site-mobile-menu site-navbar-target">
@@ -125,7 +125,7 @@
         </div>
       </div>
 <!-- benefits thing -->
-      <div class="container px-4 py-5 col-lg-8 bg-white" id="hanging-icons">
+      <div class="container px-4 py-5 col-lg-8" id="hanging-icons">
         <h2 class="pb-2 border-bottom">Your benefits with elenemts</h2>
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
           <div class="col d-flex align-items-start">
@@ -165,7 +165,7 @@
         </div>
       </div>
 <!-- pricing thing -->
-      <main class="bg-light container col-xxl-12">
+      <main class="bg-light container col-xxl-8">
         <h2 class="mb-5 pt-5 pb-2 border-bottom pl-3">Plans for Photobooth Rent</h2>
         <div class="row row-cols-1 row-cols-md-3 mb-3 text-center p-3">
           <div class="col">
@@ -310,14 +310,17 @@
           </div>
           <!--Grid column-->
   
-          <!--Grid column-->
-          <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
+           <!--Grid column-->
+           <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
             <ul class="fa-ul " style="margin-left: 1.65em;" >
               <li class="mb-3">
                 <span class="fa-li"><i class="fas fa-home"></i></span><span class="ms-2">New Delhi</span>
               </li>
               <li class="mb-3">
                 <span class="fa-li"><i class="fas fa-envelope"></i></span><span class="ms-2">contact@elenemts.com</span>
+              </li>
+              <li class="mb-3">
+                <span class="fa-li"><i class="fas fa-phone"></i></span><span class="ms-2">+91 93069 00217</span>
               </li>
               <li class="mb-3">
                 <span class="fa-li"><i class="fas fa-phone"></i></span><span class="ms-2">+91 93133 83425</span>
