--- a/shop.html
+++ b/shop.html
@@ -154,14 +154,17 @@
           </div>
           <!--Grid column-->
   
-          <!--Grid column-->
-          <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
+           <!--Grid column-->
+           <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
             <ul class="fa-ul " style="margin-left: 1.65em;" >
               <li class="mb-3">
                 <span class="fa-li"><i class="fas fa-home"></i></span><span class="ms-2">New Delhi</span>
               </li>
               <li class="mb-3">
                 <span class="fa-li"><i class="fas fa-envelope"></i></span><span class="ms-2">contact@elenemts.com</span>
+              </li>
+              <li class="mb-3">
+                <span class="fa-li"><i class="fas fa-phone"></i></span><span class="ms-2">+91 93069 00217</span>
               </li>
               <li class="mb-3">
                 <span class="fa-li"><i class="fas fa-phone"></i></span><span class="ms-2">+91 93133 83425</span>
