--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                   <a href="/import.html" style="color: white; text-decoration: none;" 
                      onmouseover="this.style.color='gray'" 
                      onmouseout="this.style.color='white'">
-                    Import Services for Wholesalers
+                    Import/Export
                   </a>
                 </h3>
                 <ul class="d-flex list-unstyled mt-auto">
