--- a/import.html
+++ b/import.html
@@ -260,7 +260,7 @@
               <div class="checkbox">
                 <label>
                   <input type="checkbox" name="term_2" value="yes">
-                  I confirm that all information provided is accurate and complete to the best of my knowledge
+                  I confirm that all information provided is accurate and complete to the best of my knowledge.
                 </label>
               </div>
             </div>
