--- a/autobooth.html
+++ b/autobooth.html
@@ -127,45 +127,126 @@
         </div>
       </div>
 <!-- benefits thing -->
-      <div class="container px-4 py-5 col-lg-8" id="hanging-icons">
-        <h2 class="pb-2 border-bottom">Your benefits with elenemts</h2>
-        <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
-          <div class="col d-flex align-items-start">
-            <div class="text-body-emphasisd-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-              <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-truck" viewBox="0 0 16 16">
-                <path d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5zm1.294 7.456A2 2 0 0 1 4.732 11h5.536a2 2 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456M12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2"/>
-              </svg>
-            </div>
-            <div>
-              <h3 class="fs-2 text-body-emphasis">Delivery & pick-up</h3>
-              <p class="text-black">For maximum reliability and punctual deliveries, we personally handle the delivery and collection of all our Pixtar packages. Through this direct handling by our own team, we can ensure that there are no delivery issues or delays caused by external courier services.</p>
+
+
+      <section class="bg-light py-3 py-md-5 py-xl-8">
+        <div class="container">
+          <div class="row justify-content-md-center">
+            <div class="col-12 col-md-10 col-lg-8 col-xl-7 col-xxl-6">
+              <h2 class="mb-4 display-5 text-center">Experience Excellence</h2>
+              <p class="text-secondary mb-5 text-center lead fs-4">We stand out as the epitome of customer-centricity, offering the best benefits like free shipping and 24/7 support.</p>
+              <hr class="w-50 mx-auto mb-5 mb-xl-9 border-dark-subtle">
             </div>
           </div>
-          <div class="col d-flex align-items-start">
-            <div class="text-body-emphasisd-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-              <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-box-seam" viewBox="0 0 16 16">
-                <path d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5l2.404.961L10.404 2zm3.564 1.426L5.596 5 8 5.961 14.154 3.5zm3.25 1.7-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464z"/>
-              </svg>
-            </div>
-            <div>
-              <h3 class="fs-2 text-body-emphasis">Set-up and dismantling</h3>
-              <p class="text-black">You do not have to take care of the set-up or dismantling. We set up the photo booth before your event and dismantle it afterwards.</p>
+        </div>
+      
+        <div class="container">
+          <div class="row">
+            <div class="col-12">
+              <div class="container-fluid">
+                <div class="row gy-3 gy-md-4">
+                  <div class="col-12 col-lg-4">
+                    <div class="card border-dark">
+                      <div class="card-body p-3 p-md-4 p-xxl-5 d-flex justify-content-center align-items-center">
+                        <div class="me-3 text-dark p-3">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-truck" viewBox="0 0 16 16">
+                            <path d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5zm1.294 7.456A2 2 0 0 1 4.732 11h5.536a2 2 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456M12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2"/>
+                          </svg>
+                        </div>
+                        <div>
+                          <h4 class="mb-1">Delivery & pick-up</h4>
+                          <p class="m-0 text-secondary">Eliminates shipping costs</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-12 col-lg-4">
+                    <div class="card border-dark">
+                      <div class="card-body p-3 p-md-4 p-xxl-5 d-flex justify-content-center align-items-center">
+                        <div class="me-3 text-dark p-3">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-box-seam" viewBox="0 0 16 16">
+                            <path d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5l2.404.961L10.404 2zm3.564 1.426L5.596 5 8 5.961 14.154 3.5zm3.25 1.7-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464z"/>
+                          </svg>
+                        </div>
+                        <div>
+                          <h4 class="mb-1">Set-up and dismantling</h4>
+                          <p class="m-0 text-secondary">No worries for setup</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-12 col-lg-4">
+                    <div class="card border-dark">
+                      <div class="card-body p-3 p-md-4 p-xxl-5 d-flex justify-content-center align-items-center">
+                        <div class="me-3 text-dark p-3">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-clock" viewBox="0 0 16 16">
+                            <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71z"/>
+                            <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16m7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0"/>
+                          </svg>
+                        </div>
+                        <div>
+                          <h4 class="mb-1">24/7 Support</h4>
+                          <p class="m-0 text-secondary">Customer's peace of mind</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
-          <div class="col d-flex align-items-start">
-            <div class=" text-body-emphasis d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-              <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-clock" viewBox="0 0 16 16">
-                <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71z"/>
-                <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16m7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0"/>
-              </svg>
+        </div>
+      </section>
+
+      <!-- Process thinh -->
+
+      <!-- Process 1 - Bootstrap Brain Component -->
+<section class="py-3 py-md-5 py-xl-8">
+  <div class="container">
+    <div class="row gy-5 gy-lg-0 align-items-lg-center">
+      <div class="col-12 col-lg-6">
+        <img class="img-fluid rounded" loading="lazy" src="./assets/img/process-img-1.png" alt="Our Design Process">
+      </div>
+      <div class="col-10 col-lg-6 pl-5">
+        <div class="row justify-content-xl-end">
+          <div class="col-12 col-xl-11">
+            <h2 class="h1 mb-3">Our Design Process</h2>
+            <p class="lead fs-4 text-secondary mb-5">Our design approach is very organized to ensure satisfaction for our esteemed clients.</p>
+            <div class="d-flex mb-4">
+              <div>
+                <span class="btn btn-dark bsb-btn-circle pe-none me-4">1</span>
+              </div>
+              <div>
+                <h4 class="mb-3">Planning</h4>
+                <p class="mb-0 text-secondary">Get to know your users and their needs better through surveys, interviews, usability testing, and other methods.</p>
+              </div>
             </div>
-            <div>
-              <h3 class="fs-2 text-body-emphasis">24/7 Support</h3>
-              <p class="text-black">In case there are disruptions or issues with the photo booth during your event, we offer comprehensive 24/7 support.</p>
+            <div class="d-flex mb-4">
+              <div>
+                <span class="btn btn-dark bsb-btn-circle pe-none me-4">2</span>
+              </div>
+              <div>
+                <h4 class="mb-3">Launch</h4>
+                <p class="mb-0 text-secondary">This involves creating wireframes, mockups, and prototypes to test out your ideas and get feedback from users.</p>
+              </div>
+            </div>
+            <div class="d-flex">
+              <div>
+                <span class="btn btn-dark bsb-btn-circle pe-none me-4">3</span>
+              </div>
+              <div>
+                <h4 class="mb-3">Finalize Product</h4>
+                <p class="mb-0 text-secondary">Once your product is launched, it's important to gather feedback from users to learn what they like and dislike about it.</p>
+              </div>
             </div>
           </div>
         </div>
       </div>
+    </div>
+  </div>
+</section>
+
+
 <!-- pricing thing -->
       <main class="bg-light container col-xxl-8">
         <h2 class="mb-5 pt-5 pb-2 border-bottom pl-3">Plans for Photobooth Rent</h2>
@@ -479,7 +560,8 @@
   <!-- Grid container -->
 
       <!-- Copyright -->
-      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      <!-- Copyright -->
+      <div class="text-center p-3" style="background-color: rgb(0, 0, 0);">
         © 2025 Copyright:
         <a class="text-link" href="https://elenemts.com/">elenemts</a>
       </div>
