--- a/eComBlog.html
+++ b/eComBlog.html
@@ -235,8 +235,8 @@
   </div>
   <!-- Grid container -->
 
-      <!-- Copyright -->
-      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+       <!-- Copyright -->
+       <div class="text-center p-3" style="background-color: rgb(0, 0, 0);">
         © 2025 Copyright:
         <a class="text-link" href="https://elenemts.com/">elenemts</a>
       </div>
