--- a/import.html
+++ b/import.html
@@ -358,12 +358,12 @@
   </div>
   <!-- Grid container -->
 
-      <!-- Copyright -->
-      <div class="text-center p-3 text-black" style="background-color: rgba(0, 0, 0, 0.2);">
-        © 2025 Copyright:
-        <a class="text-link" href="https://elenemts.com/">elenemts</a>
-      </div>
-      <!-- Copyright -->
+ <!-- Copyright -->
+ <div class="text-center p-3" style="background-color: rgb(0, 0, 0);">
+  © 2025 Copyright:
+  <a class="text-link" href="https://elenemts.com/">elenemts</a>
+</div>
+<!-- Copyright -->
 </footer>
 <!-- Footer -->
   
