--- a/shop.html
+++ b/shop.html
@@ -210,7 +210,7 @@
   <!-- Grid container -->
 
       <!-- Copyright -->
-      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      <div class="text-center p-3" style="background-color: rgb(0, 0, 0);">
         © 2025 Copyright:
         <a class="text-link" href="https://elenemts.com/">elenemts</a>
       </div>
