--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="fonts/icomoon/style.css">
 
     <link rel="stylesheet" href="css/owl.carousel.min.css">
@@ -22,7 +21,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <link rel="icon" href="images/no-bg-elenemts.png" type="image/x-icon">
-
+    <style>
+      body {
+        font-family: 'Montserrat', sans-serif;
+      }
+    </style>
     <title>elenemts</title>
   </head>
   <body class="text-black bg-white h1-white">
@@ -106,7 +109,7 @@
                 <div class="row">
                   <div class="col-12 col-md-9 col-lg-8 col-xl-7 col-xxl-6">
                     <h2 class="fs-5 mb-3 text-white text-uppercase">Our Services & Expertise</h2>
-                    <h2 class="display-5 text-white mb-4">We are a design agency studio delivering custom creative & unique websites.</h2>
+                    <h2 class="display-5 text-white mb-4" >We are a design agency studio delivering custom creative & unique websites.</h2>
                     <a href="#!" class="btn bsb-btn-2xl btn-light rounded mb-0 text-nowrap">Join Us</a>
                   </div>
                 </div>
@@ -140,11 +143,11 @@
             </section>
           </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+      <button class="carousel-control-prev visually-hidden" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
       </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+      <button class="carousel-control-next visually-hidden" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
       </button>
