--- a/eComBlog.html
+++ b/eComBlog.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
 
     <link rel="stylesheet" href="fonts/icomoon/style.css">
 
@@ -29,6 +31,8 @@
           flex-direction: column;
           background-color: rgb(255, 255, 255);
           color: rgb(0, 0, 0);
+          font-family: montserrat ;
+
       }
       .content {
           flex: 1;
