--- a/import.html
+++ b/import.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://unpkg.com/bs-brain@2.0.4/utilities/bsb-overlay/bsb-overlay.css">
+<link rel="stylesheet" href="https://unpkg.com/bs-brain@2.0.4/utilities/bsb-btn-size/bsb-btn-size.css">
+<link rel="stylesheet" href="https://unpkg.com/bs-brain@2.0.4/components/heroes/hero-6/assets/css/hero-6.css">
+
 
     <link rel="stylesheet" href="fonts/icomoon/style.css">
 
@@ -29,6 +36,8 @@
           flex-direction: column;
           background-color: rgb(255, 255, 255);
           color: rgb(0, 0, 0);
+          font-family: montserrat ;
+
       }
       .content {
           flex: 1;
@@ -112,15 +121,29 @@
 <!-- contentttt -->
 <!-- Import Export Service Blog Post -->
 
-  <div class="row justify-content-center p-3">
-      <div class="col-lg-8 col-md-10 col-sm-12">
-          <h1 class="text-cente pt-5">Expand Your Business with Our Import-Export Services</h1>
-          <p class="text-muted text-center">Seamless global trade solutions for your business.</p>
-          <img src="images/importexport.jpg" class="img-fluid rounded mb-4" alt="Import-export logistics">
-          <p class="text-black">International trade can be complex, but our experienced team makes it hassle-free. We handle everything from customs clearance to logistics, ensuring your goods move efficiently across borders.</p>
-          <p class="text-black">With a strong global network and compliance expertise, we help businesses navigate international markets with ease. Let us manage the process so you can focus on growth.</p>
+<!-- photo hero  -->
+<!-- Hero 6 - Bootstrap Brain Component -->
+<section class="py-4 py-md-5 pt-5">
+  <div>
+    <div class="row">
+      <div class="col-12">
+        <div class="container-fluid bsb-overlay bsb-hero-6 border border-dark" style=" background-image: url('images/venti-views-FPKnAO-CF6M-unsplash.jpg');">
+          <div class="row">
+            <div class="col-12 col-md-11 col-xl-10">
+              <h2 class="display-1 text-md-start fw-bold mb-4 pt-5 pl-2" style="color: white; -webkit-text-stroke: 1px black;">Expand Your Business with Our <br> Import-Export Services</h2>
+              <p class="lead text-md-start text-shadow d-flex justify-content-sm-center justify-content-md-start">
+                <span class="col-12 col-sm-10 col-md-8 col-xxl-7" >International trade can be complex, but our experienced team makes it hassle-free. We handle everything from customs clearance to logistics, ensuring your goods move efficiently across borders.</span>
+              </p>
+              <div class="pl-3">
+                <a href="#!" class="btn btn-outline-light text-white mb-5">Explore More</a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
+    </div>
   </div>
+</section>
 
   
 
