--- a/index.html
+++ b/index.html
@@ -107,10 +107,14 @@
             <section class="bsb-cta-1 px-2 bsb-overlay" style="background-image: url('./images/1st\ \(1\).jpg');">
               <div class="container">
                 <div class="row">
-                  <div class="col-12 col-md-9 col-lg-8 col-xl-7 col-xxl-6">
-                    <h2 class="fs-5 mb-3 text-white text-uppercase">Our Services & Expertise</h2>
-                    <h2 class="display-5 text-white mb-4" >We are a design agency studio delivering custom creative & unique websites.</h2>
-                    <a href="#!" class="btn bsb-btn-2xl btn-light rounded mb-0 text-nowrap">Join Us</a>
+                  <div class="col-12 col-md-11 col-xl-10">
+                    <h4 class="display-1 text-md-start fw-bold mb-4 pt-5 pl-2" style="color: white; -webkit-text-stroke: 1px black;">Our Services & Expertise</h4>
+                    <p class="lead text-md-start text-shadow d-flex justify-content-sm-center justify-content-md-start">
+                      <span class="col-12 col-sm-10 col-md-8 col-xxl-7" >We are a design agency studio delivering custom creative & unique websites.</span>
+                    </p>
+                    <div class="pl-3">
+                      <a href="#!" class="btn btn-outline-light text-white mb-5">Join Us</a>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -120,10 +124,14 @@
             <section class="bsb-cta-1 px-2 bsb-overlay" style="background-image: url('./images/2nd\ \(1\).jpg');">
               <div class="container">
                 <div class="row">
-                  <div class="col-12 col-md-9 col-lg-8 col-xl-7 col-xxl-6">
-                    <h2 class="fs-5 mb-3 text-white text-uppercase">Our Services & Expertise</h2>
-                    <h2 class="display-5 text-white mb-4">We are a design agency studio delivering custom creative & unique websites.</h2>
-                    <a href="#!" class="btn bsb-btn-2xl btn-light rounded mb-0 text-nowrap">Join Us</a>
+                  <div class="col-12 col-md-11 col-xl-10">
+                    <h4 class="display-1 text-md-start fw-bold mb-4 pt-5 pl-2" style="color: white; -webkit-text-stroke: 1px black;">Our Services & Expertise</h4>
+                    <p class="lead text-md-start text-shadow d-flex justify-content-sm-center justify-content-md-start">
+                      <span class="col-12 col-sm-10 col-md-8 col-xxl-7" >We are a design agency studio delivering custom creative & unique websites.</span>
+                    </p>
+                    <div class="pl-3">
+                      <a href="#!" class="btn btn-outline-light text-white mb-5">Join Us</a>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -133,10 +141,14 @@
             <section class="bsb-cta-1 px-2 bsb-overlay" style="background-image: url('./images/3rd\ \(1\).jpg');">
               <div class="container">
                 <div class="row">
-                  <div class="col-12 col-md-9 col-lg-8 col-xl-7 col-xxl-6">
-                    <h2 class="fs-5 mb-3 text-white text-uppercase">Our Services & Expertise</h2>
-                    <h2 class="display-5 text-white mb-4">We are a design agency studio delivering custom creative & unique websites.</h2>
-                    <a href="#!" class="btn bsb-btn-2xl btn-light rounded mb-0 text-nowrap">Join Us</a>
+                  <div class="col-12 col-md-11 col-xl-10">
+                    <h4 class="display-1 text-md-start fw-bold mb-4 pt-5 pl-2" style="color: white; -webkit-text-stroke: 1px black;">Our Services & Expertise</h4>
+                    <p class="lead text-md-start text-shadow d-flex justify-content-sm-center justify-content-md-start">
+                      <span class="col-12 col-sm-10 col-md-8 col-xxl-7" >We are a design agency studio delivering custom creative & unique websites.</span>
+                    </p>
+                    <div class="pl-3">
+                      <a href="#!" class="btn btn-outline-light text-white mb-5">Join Us</a>
+                    </div>
                   </div>
                 </div>
               </div>
