--- a/autobooth.html
+++ b/autobooth.html
@@ -146,8 +146,8 @@
               <div class="container-fluid">
                 <div class="row gy-3 gy-md-4">
                   <div class="col-12 col-lg-4">
-                    <div class="card border-dark">
-                      <div class="card-body p-3 p-md-4 p-xxl-5 d-flex justify-content-center align-items-center">
+                    <div class="card border-dark rounded-0">
+                      <div class="card-body p-3 p-md-4 p-xxl-5 d-flex justify-content-start ml-3">
                         <div class="me-3 text-dark p-3">
                           <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-truck" viewBox="0 0 16 16">
                             <path d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5zm1.294 7.456A2 2 0 0 1 4.732 11h5.536a2 2 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456M12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2"/>
@@ -161,23 +161,23 @@
                     </div>
                   </div>
                   <div class="col-12 col-lg-4">
-                    <div class="card border-dark">
-                      <div class="card-body p-3 p-md-4 p-xxl-5 d-flex justify-content-center align-items-center">
+                    <div class="card border-dark rounded-0">
+                      <div class="card-body p-3 p-md-4 p-xxl-5 d-flex justify-content-start ml-3">
                         <div class="me-3 text-dark p-3">
                           <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-box-seam" viewBox="0 0 16 16">
                             <path d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5l2.404.961L10.404 2zm3.564 1.426L5.596 5 8 5.961 14.154 3.5zm3.25 1.7-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464z"/>
                           </svg>
                         </div>
                         <div>
-                          <h4 class="mb-1">Set-up and dismantling</h4>
+                          <h4 class="mb-1">  Hassle  Free Set-up  </h4>
                           <p class="m-0 text-secondary">No worries for setup</p>
                         </div>
                       </div>
                     </div>
                   </div>
                   <div class="col-12 col-lg-4">
-                    <div class="card border-dark">
-                      <div class="card-body p-3 p-md-4 p-xxl-5 d-flex justify-content-center align-items-center">
+                    <div class="card border-dark rounded-0">
+                      <div class="card-body p-3 p-md-4 p-xxl-5 d-flex justify-content-start ml-3">
                         <div class="me-3 text-dark p-3">
                           <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-clock" viewBox="0 0 16 16">
                             <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71z"/>
@@ -205,20 +205,20 @@
   <div class="container">
     <div class="row gy-5 gy-lg-0 align-items-lg-center">
       <div class="col-12 col-lg-6">
-        <img class="img-fluid rounded" loading="lazy" src="./assets/img/process-img-1.png" alt="Our Design Process">
+        <img class="img-fluid rounded" loading="lazy" src="images/Photobooth-noir.png" alt="Our Design Process">
       </div>
       <div class="col-10 col-lg-6 pl-5">
         <div class="row justify-content-xl-end">
           <div class="col-12 col-xl-11">
-            <h2 class="h1 mb-3">Our Design Process</h2>
-            <p class="lead fs-4 text-secondary mb-5">Our design approach is very organized to ensure satisfaction for our esteemed clients.</p>
+            <h2 class="h1 mb-3 text-center border border-dark p-3 mb-5">Book Your Perfect <b><i>Photobooth</i></b><br> in  <br> 3 Simple Steps </h2>
+            <!-- <p class="lead fs-4 text-secondary mb-5">Our design approach is very organized to ensure satisfaction for our esteemed clients.</p> -->
             <div class="d-flex mb-4">
               <div>
                 <span class="btn btn-dark bsb-btn-circle pe-none me-4">1</span>
               </div>
               <div>
-                <h4 class="mb-3">Planning</h4>
-                <p class="mb-0 text-secondary">Get to know your users and their needs better through surveys, interviews, usability testing, and other methods.</p>
+                <h4 class="mb-3">Choose Your Package</h4>
+                <p class="mb-0 text-secondary">Select the perfect photobooth package, including duration, prints, and add-ons like themes or props.</p>
               </div>
             </div>
             <div class="d-flex mb-4">
@@ -226,8 +226,8 @@
                 <span class="btn btn-dark bsb-btn-circle pe-none me-4">2</span>
               </div>
               <div>
-                <h4 class="mb-3">Launch</h4>
-                <p class="mb-0 text-secondary">This involves creating wireframes, mockups, and prototypes to test out your ideas and get feedback from users.</p>
+                <h4 class="mb-3">Select Date & Time</h4>
+                <p class="mb-0 text-secondary">Pick your event date and time using a real-time availability calendar.</p>
               </div>
             </div>
             <div class="d-flex">
@@ -235,8 +235,8 @@
                 <span class="btn btn-dark bsb-btn-circle pe-none me-4">3</span>
               </div>
               <div>
-                <h4 class="mb-3">Finalize Product</h4>
-                <p class="mb-0 text-secondary">Once your product is launched, it's important to gather feedback from users to learn what they like and dislike about it.</p>
+                <h4 class="mb-3">Confirm Booking & Payment</h4>
+                <p class="mb-0 text-secondary">Review your booking, provide event details, and complete secure payment.</p>
               </div>
             </div>
           </div>
@@ -252,7 +252,7 @@
         <h2 class="mb-5 pt-5 pb-2 border-bottom pl-3">Plans for Photobooth Rent</h2>
         <div class="row row-cols-1 row-cols-md-3 mb-3 text-center p-3">
           <div class="col">
-            <div class="card mb-4 rounded-3 shadow-sm">
+            <div class="card mb-4 rounded-0 shadow-sm">
               <div class="card-header py-3">
                 <h4 class="my-0 fw-normal">Basic</h4>
               </div>
@@ -264,12 +264,12 @@
                   <li>Email support</li>
                   <li>Help center access</li> -->
                 </ul>
-                <button type="button" class="w-100 btn btn-lg btn-dark">Contact Now</button>
+                <button type="button" class="w-100 btn btn-lg btn-dark">Book Now</button>
               </div>
             </div>
           </div>
           <div class="col">
-            <div class="card mb-4 rounded-3 shadow-sm">
+            <div class="card mb-4 rounded-0 shadow-sm">
               <div class="card-header py-3">
                 <h4 class="my-0 fw-normal">Pro</h4>
               </div>
@@ -281,12 +281,12 @@
                   <li>Priority email support</li>
                   <li>Help center access</li> -->
                 </ul>
-                <button type="button" class="w-100 btn btn-lg btn-dark">Contact Now</button>
+                <button type="button" class="w-100 btn btn-lg btn-dark">Book Now</button>
               </div>
             </div>
           </div>
           <div class="col">
-            <div class="card mb-4 rounded-3 shadow-sm">
+            <div class="card mb-4 rounded-0 shadow-sm">
               <div class="card-header py-3 ">
                 <h4 class="my-0 fw-normal">Ultra</h4>
               </div>
@@ -298,7 +298,7 @@
                   <li>Phone and email support</li>
                   <li>Help center access</li> -->
                 </ul>
-                <button type="button" class="w-100 btn btn-lg btn-dark">Contact Now</button>
+                <button type="button" class="w-100 btn btn-lg btn-dark">Book Now</button>
               </div>
             </div>
           </div>
