--- a/index.html
+++ b/index.html
@@ -187,13 +187,11 @@
           <div class="col">
             <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-2 shadow-lg" style="background-image: url('images/ie.jpg');">
               <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-                <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">
-                  <a href="/import.html" style="color: white; text-decoration: none;" 
-                     onmouseover="this.style.color='gray'" 
-                     onmouseout="this.style.color='white'">
+                <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">
+                  <a href="/import.html" style="color: white;  -webkit-text-stroke: 1px black; font-size: 40px;" >
                     Import/Export
                   </a>
-                </h3>
+                </h2>
                 <ul class="d-flex list-unstyled mt-auto">
                   <!-- <li class="me-auto">
                     <img src="https://github.com/twbs.png" alt="Bootstrap" width="32" height="32" class="rounded-circle border border-white">
@@ -215,9 +213,7 @@
             <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-2 shadow-lg" style="background-image: url('images/autobooth.jpg');">
               <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
                 <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">
-                  <a href="/autobooth.html" style="color: white; text-decoration: none;" 
-                     onmouseover="this.style.color='gray'" 
-                     onmouseout="this.style.color='white'">
+                  <a href="/autobooth.html" style="color: white; -webkit-text-stroke: 1px black; font-size: 40px;">
                     Photobooth for Rental
                   </a>
                 </h3>
@@ -242,9 +238,7 @@
             <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-2 shadow-lg" style="background-image: url('images/E-Commerce\ Illustration\ Kit-01.jpg');">
               <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
                 <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">
-                  <a href="/shop.html" style="color: white; text-decoration: none;" 
-                     onmouseover="this.style.color='gray'" 
-                     onmouseout="this.style.color='white'">
+                  <a href="/shop.html" style="color: white; -webkit-text-stroke: 1px black; font-size: 40px;">
                     E-commerce Store
                   </a>
                 </h3>
