--- a/import.html
+++ b/import.html
@@ -128,7 +128,7 @@
     <div class="row">
       <div class="col-12">
         <div class="container-fluid bsb-overlay bsb-hero-6 border border-dark" style=" background-image: url('images/venti-views-FPKnAO-CF6M-unsplash.jpg');">
-          <div class="row">
+          <div class="row align-items-center pl-xl-5">
             <div class="col-12 col-md-11 col-xl-10">
               <h4 class="display-1 text-md-start fw-bold mb-4 pt-5 pl-2" style="color: white; -webkit-text-stroke: 1px black;">Expand Your Business with Our <br> Import-Export Services</h4>
               <p class="lead text-md-start text-shadow d-flex justify-content-sm-center justify-content-md-start">
