--- a/autobooth.html
+++ b/autobooth.html
@@ -154,7 +154,7 @@
                           </svg>
                         </div>
                         <div>
-                          <h4 class="mb-1">Delivery & pick-up</h4>
+                          <h4 class="mb-1 mt-2">Delivery & pick-up</h4>
                           <p class="m-0 text-secondary">Eliminates shipping costs</p>
                         </div>
                       </div>
@@ -169,7 +169,7 @@
                           </svg>
                         </div>
                         <div>
-                          <h4 class="mb-1">  Hassle  Free Set-up  </h4>
+                          <h4 class="mb-1 mt-2">  Hassle  Free Set-up  </h4>
                           <p class="m-0 text-secondary">No worries for setup</p>
                         </div>
                       </div>
@@ -185,7 +185,7 @@
                           </svg>
                         </div>
                         <div>
-                          <h4 class="mb-1">24/7 Support</h4>
+                          <h4 class="mb-1 mt-2">24/7 Support</h4>
                           <p class="m-0 text-secondary">Customer's peace of mind</p>
                         </div>
                       </div>
@@ -207,7 +207,7 @@
       <div class="col-12 col-lg-6">
         <img class="img-fluid rounded" loading="lazy" src="images/Photobooth-noir.png" alt="Our Design Process">
       </div>
-      <div class="col-10 col-lg-6 pl-5">
+      <div class="col-11 col-lg-6 pl-5">
         <div class="row justify-content-xl-end">
           <div class="col-12 col-xl-11">
             <h2 class="h1 mb-3 text-center border border-dark p-3 mb-5">Book Your Perfect <b><i>Photobooth</i></b><br> in  <br> 3 Simple Steps </h2>
@@ -217,7 +217,7 @@
                 <span class="btn btn-dark bsb-btn-circle pe-none me-4">1</span>
               </div>
               <div>
-                <h4 class="mb-3">Choose Your Package</h4>
+                <h4 class="mb-3">Choose Your Plan</h4>
                 <p class="mb-0 text-secondary">Select the perfect photobooth package, including duration, prints, and add-ons like themes or props.</p>
               </div>
             </div>
