--- a/index.html
+++ b/index.html
@@ -108,8 +108,7 @@
               <div class="container">
                 <div class="row">
                   <div class="col-12 col-md-11 col-xl-10">
-                    <h4 class="display-1 text-md-start fw-bold mb-4 pt-5 pl-2" style="color: white; -webkit-text-stroke: 1px black;">Our Services & Expertise</h4>
-                    <h4 class="display-1 text-md-start fw-bold mb-4 pt-5 pl-2" style="color: white; -webkit-text-stroke: 1px black;">Expand Your Business with Our <br> Import-Export Services</h4>
+                    <h4 class="display-1 text-md-start fw-bold mb-4 pt-5 pl-2 text-white">Our Services & Expertise</h4>
                     <p class="lead text-md-start text-shadow d-flex justify-content-sm-center justify-content-md-start">
                       <span class="col-12 col-sm-10 col-md-8 col-xxl-7" >We are a design agency studio delivering custom creative & unique websites.</span>
                     </p>
