--- a/autobooth.html
+++ b/autobooth.html
@@ -234,7 +234,7 @@
                   <ul class="list-unstyled mt-3 mb-4">
                     <li>3 Hours</li>
                   </ul>
-                  <a href="datepicker.html"><button type="button" class="w-100 btn btn-lg btn-dark">Book Now</button></a> 
+                  <a onclick="window.location.href='datepicker.html?plan=basic'"><button type="button" class="w-100 btn btn-lg btn-dark">Book Now</button></a> 
                 </div>
               </div>
             </div>
@@ -248,7 +248,7 @@
                   <ul class="list-unstyled mt-3 mb-4">
                     <li>4 Hours</li>
                   </ul>
-                  <a href="datepicker.html"><button type="button" class="w-100 btn btn-lg btn-dark">Book Now</button></a> 
+                  <a onclick="window.location.href='datepicker.html?plan=pro'"><button type="button" class="w-100 btn btn-lg btn-dark">Book Now</button></a> 
                 </div>
               </div>
             </div>
@@ -262,7 +262,7 @@
                   <ul class="list-unstyled mt-3 mb-4">
                     <li>4 Hours</li>
                   </ul>
-                  <a href="datepicker.html"><button type="button" class="w-100 btn btn-lg btn-dark">Book Now</button></a> 
+                  <a onclick="window.location.href='datepicker.html?plan=ultra'"><button type="button" class="w-100 btn btn-lg btn-dark">Book Now</button></a> 
                 </div>
               </div>
             </div>
