--- a/datepicker.html
+++ b/datepicker.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Booking Form with Map Location</title>
+  <title>Booking Form</title>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -15,6 +15,8 @@
     #map {
       height: 300px;
       margin-bottom: 1rem;
+      border: 1px solid #ddd;
+      border-radius: 8px;
     }
 
     .booked-date {
@@ -22,54 +24,99 @@
       color: #721c24 !important;
       pointer-events: none;
     }
+
+    .form-container {
+      background: #fff;
+      border-radius: 8px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      padding: 2rem;
+    }
+
+    .form-title {
+      font-size: 1.5rem;
+      font-weight: bold;
+      margin-bottom: 1.5rem;
+    }
+
+    .btn-success {
+      background-color: #28a745;
+      border-color: #28a745;
+    }
   </style>
 
   <!-- Google Maps API -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBnGOd4MOLJ6bqjaJehTNaH18M9F_Dgt0I&libraries=places"></script>
 </head>
-<body>
-  <div class="container mt-5">
-    <div class="row">
-      <!-- Booking Form -->
+<body style="background-color: #000000;">
+  <div class="container mt-3 mb-3">
+    <div class="row justify-content-center">
       <div class="col-md-8">
-        <h3>Fill Your Details and Select a Date:</h3>
-        <form id="bookingForm">
-          <div class="mb-3">
-            <label for="name" class="form-label">Name</label>
-            <input type="text" class="form-control" id="name" placeholder="Enter your name" required>
-          </div>
+        <div class="form-container ">
+          <h3 class="form-title text-dark">Photobooth Booking Form</h3>
+          <form id="bookingForm">
+            <div class="mb-3">
+              <label for="name" class="form-label">Name</label>
+              <input type="text" class="form-control" id="name" placeholder="Enter your name" required>
+            </div>
 
-          <div class="mb-3">
-            <label for="contact" class="form-label">Contact Number</label>
-            <input type="tel" class="form-control" id="contact" placeholder="Enter your contact number" required pattern="[0-9]{10}">
-            <small class="form-text text-muted">Enter a 10-digit mobile number.</small>
-          </div>
+            <div class="mb-3">
+              <label for="contact" class="form-label">Contact Number</label>
+              <input type="tel" class="form-control" id="contact" placeholder="Enter your contact number" required pattern="[0-9]{10}">
+              <small class="form-text text-muted">Enter a 10-digit mobile number.</small>
+            </div>
 
-          <!-- Always-Visible Calendar -->
-          <div class="mb-4">
-            <label for="datepicker" class="form-label">Select a Date</label>
-            <div id="inlineDatePicker"></div>
-            <input type="hidden" id="datepicker" required>
-            <div id="selectedDate" class="mt-2 text-success"></div>
-          </div>
+            <div class="mb-3">
+              <label for="plan" class="form-label">Select Plan</label>
+              <select id="plan" class="form-select">
+                <option value="basic">Basic</option>
+                <option value="pro">Pro</option>
+                <option value="ultra">Ultra</option>
+              </select>
+            </div>
 
-          <div class="mb-3">
-            <label for="location" class="form-label">Select Location</label>
-            <div id="map"></div>
-          </div>
+            <div class="mb-3">
+              <label for="datepicker" class="form-label">Select a Date</label>
+              <input type="hidden" id="datepicker" required>
+              <div id="inlineDatePicker" class="border rounded p-2"></div>
+              <div id="selectedDate" class="mt-2 text-success"></div>
+            </div>
 
-          <div class="mb-3">
-            <label for="streetName" class="form-label">Street Name</label>
-            <input type="text" id="streetName" class="form-control" placeholder="Street name" readonly>
-          </div>
+            <div class="mb-3">
+              <label for="locationInput" class="form-label">Search Location</label>
+              <input type="text" id="locationInput" class="form-control mb-2" placeholder="Search for a location">
+              <div id="map"></div>
+            </div>
 
-          <div class="mb-3">
-            <label for="address" class="form-label">Address</label>
-            <input type="text" id="address" class="form-control" placeholder="Full address" readonly>
-          </div>
+            <div class="mb-3">
+              <label for="streetName" class="form-label">Street Name</label>
+              <input type="text" id="streetName" class="form-control" placeholder="Street name" readonly>
+            </div>
 
-          <button type="submit" class="btn btn-success">Confirm Booking</button>
-        </form>
+            <div class="mb-3">
+              <label for="address" class="form-label">Address</label>
+              <input type="text" id="address" class="form-control" placeholder="Full address" readonly>
+            </div>
+            <div class="col-lg-12 col-xs-12">
+              <div class="checkbox">
+                <label>
+                  <input type="checkbox" name="term_1" value="yes">
+                  I acknowledge that all transactions are final, with no returns or refunds, and I have reviewed and agree to the terms and conditions.
+                </label>
+              </div>
+            </div>
+            <div class="col-lg-12 col-xs-12 pt-2">
+              <div class="checkbox pl-2">
+                <label>
+                  <input type="checkbox" name="term_2" value="yes">
+                  I confirm that all information provided is accurate and complete to the best of my knowledge.
+                </label>
+              </div>
+            </div>
+            <div>
+              <button type="submit" class="btn btn-outline-dark mt-3">Confirm Booking</button>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
   </div>
@@ -128,8 +175,14 @@
 
         const name = $('#name').val();
         const contact = $('#contact').val();
+        const plan = $('#plan').val();
         const streetName = $('#streetName').val();
         const address = $('#address').val();
+
+        if (!plan) {
+          alert('Please select a plan.');
+          return;
+        }
 
         if (!streetName || !address) {
           alert('Please select a location.');
@@ -145,16 +198,11 @@
         inlineDatePicker.datepicker('update');
 
         alert(
-          `Booking Confirmed!\n\nDetails:\nName: ${name}\nContact: ${contact}\nDate: ${selectedDate}\nStreet: ${streetName}\nAddress: ${address}`
+          `Booking Confirmed!\n\nDetails:\nName: ${name}\nContact: ${contact}\nPlan: ${plan}\nDate: ${selectedDate}\nStreet: ${streetName}\nAddress: ${address}`
         );
 
-        // Reset all form fields
-        $('#bookingForm')[0].reset();
-        $('#datepicker').val('');
-        $('#selectedDate').text('');
-        $('#streetName').val('');
-        $('#address').val('');
-        inlineDatePicker.datepicker('update', '');
+        $('#name, #contact, #datepicker, #selectedDate').val('');
+        $('#plan').val('');
       });
 
       // Google Maps Integration
@@ -174,7 +222,25 @@
           draggable: true,
         });
 
-        const geocoder = new google.maps.Geocoder();
+        const locationInput = document.getElementById("locationInput");
+        autocomplete = new google.maps.places.Autocomplete(locationInput);
+        autocomplete.bindTo("bounds", map);
+
+        // On place change, update the map and form
+        autocomplete.addListener("place_changed", () => {
+          const place = autocomplete.getPlace();
+          if (!place.geometry || !place.geometry.location) {
+            alert("No location selected.");
+            return;
+          }
+
+          const location = place.geometry.location;
+          map.setCenter(location);
+          map.setZoom(15);
+          marker.setPosition(location);
+
+          fillLocationDetails(place);
+        });
 
         // On map click, update the marker and form
         map.addListener("click", (event) => {
@@ -182,6 +248,7 @@
           map.setCenter(clickedLocation);
           marker.setPosition(clickedLocation);
 
+          const geocoder = new google.maps.Geocoder();
           geocoder.geocode({ location: clickedLocation }, (results, status) => {
             if (status === "OK" && results[0]) {
               fillLocationDetails(results[0]);
